# simplethermodynamics

./: .coveragerc  .gitignore  LICENSE.txt  README.md  pyproject.toml
examples/: Zinkevich_R2O3.json  core-features.ipynb  core.ipynb  functions.ipynb
simplethermodynamics/: __init__.py  core.py  functions.py
test/: gurvich_Fe2O3.json  test_core.py  test_functions.py
